--- a/style.css
+++ b/style.css
@@ -276,3 +276,20 @@ div * {
   animation-duration: 100ms;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite; }
+@media only screen and (max-width: 767px) {
+  body {
+    font-size: 14px;
+  }
+
+  .game-container {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .game-container {
+    width: 90%;
+    height: auto;
+  }
+}
